# tfhe_rust

./: .gitignore  Cargo.toml
src/: Architektur.md  alu.rs  client.rs  macros.rs  main.rs  memory_access.rs  server.rs
src/clientside/: client.rs  mod.rs  statics.rs  verify.rs
src/serverside/: alu.rs  control_unit.rs  memory.rs  memory_uint16.rs  memory_uint8.rs  mod.rs  opcode_container.rs  opcode_container_alu.rs  server.rs
src/util/: encrypted_map.rs  mod.rs
