[package]
name = "thfe_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Windows
#tfhe = { git = "https://github.com/zama-ai/tfhe-rs.git", rev = "20d0e81bae531cbf6e0dfd7c8a9c20427b31c575", features = ["integer", "x86_64"] }

#MacOS
tfhe = { git = "https://github.com/zama-ai/tfhe-rs.git", rev = "20d0e81bae531cbf6e0dfd7c8a9c20427b31c575", features = ["integer", "aarch64-unix"] }


bincode = "1.3.3"
rayon = "*"
