[package]
name = "thfe_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Windows
tfhe = { version = "0.4.0", features = ["integer", "x86_64"] }
#MacOS
#tfhe = { version = "*", features = ["integer", "aarch64-unix"] }

bincode = "1.3.3"
rayon = "*"
